--- a/header_in.css
+++ b/header_in.css
@@ -46,9 +46,9 @@ padding-left: 15px;
 }
 
 .in-dropdown {
-width: 70px;
+width: 22px;
 position: relative;
-left: calc(100% - 110px);
+left: calc(100% - 62px);
 text-align: right;
 top: -18px;
 ibackground-color: green;
@@ -59,6 +59,9 @@ height: 21px;
 }
 
 .dropdown-content {
+width: 70px;
+position: relative;
+left: calc(100% - 70px);
 display: none;
 text-align: right;
 ibackground-color: yellow;
